packages/itmat-query-language/src/parser/grammar.txt
START = <CONDITION_GROUP>

<CONDITION_GROUP> -> <CONDITION> <CONDITION_GROUP'>

<CONDITION_GROUP'> -> and <CONDITION> <CONDITION_GROUP'>
                    | or <CONDITION> <CONDITION_GROUP'>
                    | e

field "Sex" = "Female"       <FIELD> <INSTANCE> <ARRAY> <OP> <STRING>
field "Sex" = 1              <FIELD> <INSTANCE> <ARRAY> <OP> <NUMBER>
field 42 instance numberOf = 2      <FIELD> <INSTNACE> <ARRAY> <OP> <NUMBER>
field 54 instance 0 > field 54 instance 1  <FIELD> <INSTANCE> <ARRAY> <OP> <FIELD> <INSTANCE> <ARRAY>
expr (field 43 instance 3 * 4) > 0       expr ( <EXPRESSION> ) <OP> <NUMBER>
image field 543 instance 0 array any    image <FIELD> <INSTANCE> <ARRAY>



<CONDITION> -> ( <CONDITION_GROUP> )
            | expr ( <EXPRESSION> ) <OP> number
            | imageExistsFor <FIELD_DESCRIPTION>
            | value ( <FIELD_DESCRIPTION> ) <OP> <TARGET_VALUE>
xxxxxxxxxxx            | e if (and / or / eof);
const string = 'expr ( value (field "Sex") ) = 9 OR ( AND value(field "Sex") = "Female" )';

<TARGET_VALUE> -> number
                | name
                | value ( <FIELD_DESCRIPTION> )

<FIELD_DESCRIPTION> -> <FIELD> <INSTANCE_ARRAY>

<FIELD> -> field <FIELD_IDENTIFIER>

<FIELD_IDENTIFIER> -> number
            | name

<INSTANCE_ARRAY> -> instance <INSTANCE_ARRAY_IDENTIFIER>
            | e 

<INSTANCE_ARRAY_IDENTIFIER> -> number <ARRAY>
                            | any

<ARRAY> -> array <ARRAY_IDENTIFIER>
        | e

<ARRAY_IDENTIFIER> -> any
                    | number






<EXPRESSION> -> <TERM> <EXPRESSION'>

<EXPRESSION'> -> + <TERM> <EXPRESSION'>
              |  - <TERM> <EXPRESSION'>
              |  e

<TERM> -> <FACTOR> <TERM'>

<TERM'> -> x <FACTOR> <TERM'>
        |  / <FACTOR> <TERM'>
        | e

<FACTOR> -> ( EXPRESSION )
        | number
        | value ( <FIELD_DESCRIPTION> )
